<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/text"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#80cfe2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <SearchView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:iconifiedByDefault="false"
            android:imeOptions="actionSearch|flagNoExtractUi|flagNoFullscreen"
            android:inputType="textCapSentences" >
        </SearchView>

        <ListView
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:padding="10sp" >

        <TextView
            android:id="@+id/bytitle"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mytitle"
            android:layout_alignBottom="@+id/mytitle"
            android:layout_toRightOf="@+id/mytitle"
            android:text="@string/c_stories" />

        <TextView
            android:id="@+id/mytitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myauthor"
            android:layout_marginLeft="15dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/a_stories"
            android:textSize="12sp"  />
            <!--
android:visibility="invisible" -->
            

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/byauthor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="83dp"
            android:contentDescription="@string/empty"
            android:src="@drawable/bb26" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/byauthor"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="62dp"
            android:text="@string/clickstory"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/byauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/myauthor"
            android:layout_alignBottom="@+id/myauthor"
            android:layout_alignLeft="@+id/bytitle"
            android:text="@string/c_stories"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/myauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/mytitle"
            android:layout_marginLeft="26dp"
            android:text="@string/b_stories"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/view_btn"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_above="@+id/edit"
            android:layout_alignLeft="@+id/mytitle"
            android:background="@drawable/bye3"
            android:text="@string/f_stories"
            android:textColor="#080808"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/edit"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_alignLeft="@+id/view_btn"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bye3"
            android:text="@string/edit"
            android:textColor="#808080"
            android:textStyle="bold" />

        <Button
            android:id="@+id/share_btn1"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_alignBaseline="@+id/edit"
            android:layout_alignBottom="@+id/edit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="28dp"
            android:background="@drawable/hi3"
            android:text="@string/e_stories"
            android:textColor="#080808"
            android:textStyle="bold"/>
           <!-- android:visibility="invisible"--> 

        <Button
            android:id="@+id/del"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_above="@+id/share_btn1"
            android:layout_alignLeft="@+id/share_btn1"
            
            android:background="@drawable/hi3"
            android:text="@string/delete"
            android:textColor="#080808"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnchange"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_below="@+id/byauthor"
            android:layout_marginTop="14dp"
            android:layout_toLeftOf="@+id/textView3"
            android:background="@drawable/hi3"
            android:text="@string/d_stories"
            android:textColor="#080808"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>