<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#80cfe2" >

            <TextView
                android:id="@+id/imageButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/Text4"/>

            <TextView
                android:id="@+id/imageButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/imageButton1"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:onClick="onClick"
                android:text="@string/Text6"
                android:textColor="#080808"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/view1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:onClick="onClick"
                android:contentDescription="@string/empty"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF" >

            <EditText
                android:id="@+id/et1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:text="@string/Text5" >

                <requestFocus />
            </EditText>
            
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:orientation="vertical"
        android:background="#333">
    
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Text7"
            android:textSize="20sp" 
            android:textColor="#80cfe2"/>
         <Button
            android:id="@+id/addp"
            android:layout_width="250dp"
        android:layout_height="50dp"
        android:textColor="#80cfe2"
            android:text="@string/Text8" />

        <!-- The navigation drawer -->
    <ListView android:id="@+id/left_drawer"
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="#666"
        android:dividerHeight="1dp"
        android:background="#333"
        android:textColor="#80cfe2"
        />
    </LinearLayout>
</android.support.v4.widget.DrawerLayout> 