<?xml version="1.0" encoding="utf-8"?>
<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/viewFlipper">
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#80cfe2"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <SearchView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:iconifiedByDefault="false"
            android:imeOptions="actionSearch|flagNoExtractUi|flagNoFullscreen"
            android:inputType="textCapSentences" >
        </SearchView>

        <ListView
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true" >
        </ListView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:padding="10sp" >

        <TextView
            android:id="@+id/bytitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/mytitle"
            android:layout_alignBottom="@+id/mytitle"
            android:layout_toRightOf="@+id/mytitle"
            android:text="@string/c_stories"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/mytitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/myauthor"
            android:layout_alignParentTop="true"
            android:text="@string/a_stories"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/byauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/myauthor"
            android:layout_alignBottom="@+id/myauthor"
            android:layout_toRightOf="@+id/myauthor"
            android:text="@string/c_stories"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/myauthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bytitle"
            android:text="@string/b_stories"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/clickstory"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="43dp"
            android:src="@drawable/bb26" 
            android:contentDescription="@string/empty"/>

        <Button
            android:id="@+id/view_btn"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/bye3"
            android:text="@string/f_stories"
            android:textColor="#080808"
            android:textStyle="bold"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>
    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#80cfe2" >

            <ImageView
                android:id="@+id/view2"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:clickable="true"
                android:onClick="onClick"
                android:contentDescription="@string/empty"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF" >

            <TextView
                android:id="@+id/tvbtn"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ems="10"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="10sp"
                android:text=" " >
            </TextView>
            
        </RelativeLayout>
    </LinearLayout>
</ViewFlipper>